HEAD
	+ Set version to 8.0.0
	+ Changed deprecated Quagga for Frr package
	+ Update the OpenVPN installer file for Windows and adjust the regex that searches for it
7.1.0
	+ Bump version number
7.0.0
	+ Set version number to 7.0.0
6.2.0
	+ Update OpenVPN MS Windows 10 client's bundle
6.1.1
	+ fix verify-x509-name
6.1
	+ Set version to 6.1
6.0
	+ Change default cipher to AES-256-CBC
	+ Upgrade OpenVPN installer for Windows to 2.4.6
	+ Replace deprecated tls-remote by verify-x509-name in openvpn.conf
	+ New quagga/zebra daemon management for Ubuntu 18.04
	+ Remove log warnings regarding dh and noauth-cache params in client conf
	+ Fixed CSS styles for Client Configuration page
5.1
	+ Use 2048 instead of 1024 for DH file
5.0.1
	+ Support for PPPoE
	+ Fix module restart in postinst and postrm
5.0
	+ Adapt to systemd instead of upstart
4.2
	+ Replaced deprecated tls-remote parameter by successor verify-x509-name
	+ Corrected typo when referring to Second Nameserver
4.1.1
	+ Fix wrong call to etherIface after PPPoE removal
4.1
	+ Fix dashboard widget interfaces string to be coherent with settings one
	+ Set version to 4.1
4.0
	+ Remove use of deprecated emoteservices dynamical address
	+ Set version to 4.0
3.5
	+ Workaround in members table against losing of directory parameter/attribute
	+ Show nicer error when uploading invalid certificates to client configuration
	+ Set version to 3.5
3.4
	+ Log audit working properly for download client bundle
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Better behavior for daemons ifaceAddress methods
	+ Precondition to assure there are certificates available in
	  DownloadClientBundle model
	+ In the tunnel client bundle don't allow additional server
	  addresses because they are not supported
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.2