@@ -2,6 +2,8 @@ HEAD
 	+ Set version to 8.0.0
 	+ Changed deprecated Quagga for Frr package
 	+ Update the OpenVPN installer file for Windows and adjust the regex that searches for it
+	+ Update initial-setup and enable-module scripts
+	+ Fix typos
 7.1.0
 	+ Bump version number
 7.0.0
